访问时间统计更新明细表

--- a/html/userProperty.html
+++ b/html/userProperty.html
@@ -124,6 +124,14 @@
                                 </a>
                                 </li>
                             </ul>
+                            <ul class="sub-menu">
+                                <li class="nav-item start">
+                                    <a href="userTime.html" class="nav-link ">
+                                    <i class="iconfont icon-time" style="font-size: 20px;"></i>
+                                    <span class="title">访问时间统计</span>
+                                </a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                     <!-- END SIDEBAR MENU -->
