--- a/html/userTimeDetail.html
+++ b/html/userTimeDetail.html
@@ -111,19 +111,20 @@
                                 </li>
                             </ul>
                             <ul class="sub-menu">
-                                <li class="nav-item start open">
+                                <li class="nav-item start ">
                                     <a href="userProperty.html" class="nav-link ">
                                     <i class="iconfont icon-shuxing" style="font-size: 20px;"></i>
                                     <span class="title">上网用户属性统计</span>
-                                    <span class="selected"></span>
+                                    
                                 </a>
                                 </li>
                             </ul>
                             <ul class="sub-menu">
-                                <li class="nav-item start">
+                                <li class="nav-item start open">
                                     <a href="userTime.html" class="nav-link ">
                                     <i class="iconfont icon-time" style="font-size: 20px;"></i>
                                     <span class="title">访问时间统计</span>
+                                    <span class="selected"></span>
                                 </a>
                                 </li>
                             </ul>
@@ -148,17 +149,17 @@
                                 <i class="fa fa-circle"></i>
                             </li>
                             <li>
-                                <a href="userProperty.html"><span>上网用户属性统计</span></a>
+                                <a href="userTime.html"><span>访问时间统计</span></a>
                                 <i class="fa fa-circle"></i>
                             </li>
                             <li>
-                                <span>上网用户明细</span>
+                                <span>访问时长明细</span>
                             </li>
                         </ul>
                     </div>
                     <!-- END PAGE BAR -->
                     <!-- BEGIN PAGE TITLE-->
-                    <h1 class="page-title">上网用户明细
+                    <h1 class="page-title">访问时长明细
                         <small>2017/9/30</small>
                     </h1>
                     <!-- END PAGE TITLE-->
@@ -175,6 +176,7 @@
                                     <div class="caption">
                                         <i class="iconfont icon-liebiao" style="font-size: 17px;color:rgb(53,152,220);"></i>
                                         <span class="caption-subject font-blue sbold uppercase">用户列表</span>
+                                        <!-- <a href="#" id="time_explain"><i class="fa fa-question-circle font-grey-salsa pull-right" style="font-size: 20px;"></i></a> -->
                                     </div>
                                 </div>
                                 <div class="portlet-body">
@@ -183,14 +185,14 @@
                                             <label class="sr-only" for="devMacSearch">设备MAC：</label>
                                             <input type="text" class="form-control" id="devMacSearch" placeholder="终端MAC">
                                         </div>
-                                        <div class="form-group">
+                                        <!-- <div class="form-group">
                                             <label class="sr-only" for="devMacSearch">设备MAC：</label>
                                             <input type="text" class="form-control" id="devMacSearch" placeholder="用户昵称">
                                         </div>
                                         <div class="form-group">
                                             <label class="sr-only" for="devMacSearch">设备MAC：</label>
                                             <input type="text" class="form-control" id="devMacSearch" placeholder="用户性别">
-                                        </div>
+                                        </div> -->
                                         <a href="javascript:;" class="btn btn-circle green" id="searchBegin">
                                             <i class="fa fa-search" style="margin-right: 5px;"></i>查询 
                                         </a>
@@ -268,15 +270,22 @@
                 sortable: true, //启用排序
                 visible: true,
             }, {
-                field: 'nickName',
-                title: '用户昵称',
+                field: 'firstTime',
+                title: '首次访问时间',
                 align: 'center',
                 valign: 'middle',
                 sortable: true,
                 visible: true,
             }, {
-                field: 'status',
-                title: '用户性别',
+                field: 'lastTime',
+                title: '末次访问时间',
+                align: 'center',
+                valign: 'middle',
+                sortable: true,
+                visible: true,
+            }, {
+                field: 'durtionTime',
+                title: '访问时长',
                 align: 'center',
                 valign: 'middle',
                 sortable: true,
@@ -287,34 +296,39 @@
         //新增表格数据
         var data = [{
             mac: 'ed:54:1r:bb:t1:45',
-            nickName: 'abc',
-            status: '男',
-        }, {
-            mac: 'ef:54:1r:bb:t1:23',
-            nickName: 'def',
-            status: '女',
-        }, {
-            mac: '0f:8y:bt:mn:t0:54',
-            nickName: 'def',
-            status: '男',
-        }, {
-            mac: '0f:8y:bt:mn:t0:34',
-            nickName: 'def',
-            status: '女',
-        }, {
-            mac: '0f:8y:bt:mn:t0:56',
-            nickName: 'def',
-            status: '男',
+            firstTime: '07:24:44',
+            lastTime: '16:21:20',
+            durtionTime: '10小时58分钟20秒',
         }];
         for (var i = 0; i < 100; i++) {
             data.push({
-                mac: 'ed:54:1r:bb:t1:45',
-                nickName: 'def',
-                status: '男',
+                mac: 'ed:54:1r:bb:t1:' + RandomNumBoth(10, 99),
+                firstTime: padNumber(RandomNumBoth(1, 12), 2) + ':' + padNumber(RandomNumBoth(0, 59), 2) + ':' + padNumber(RandomNumBoth(0, 59), 2),
+                lastTime: padNumber(RandomNumBoth(13, 23), 2) + ':' + padNumber(RandomNumBoth(0, 59), 2) + ':' + padNumber(RandomNumBoth(0, 59), 2),
+                durtionTime: RandomNumBoth(1, 23) + '小时' + RandomNumBoth(0, 59) +
+                    '分钟' + RandomNumBoth(1, 59) + '秒',
             })
         }
         $('#mytable').bootstrapTable('append', data);
     })
+
+    /////////////////////////////////////////////////////////
+    // 生成范围随机数
+    function RandomNumBoth(Min, Max) {
+        var Range = Max - Min;
+        var Rand = Math.random();
+        var num = Min + Math.round(Rand * Range); //四舍五入
+        return num;
+    }
+    ///////////////////////////////////////////////////////////
+    // 补0
+    function padNumber(num, fill) {
+        //改自：http://blog.csdn.net/aimingoo/article/details/4492592
+        var len = ('' + num).length;
+        return (Array(
+            fill > len ? fill - len + 1 || 0 : 0
+        ).join(0) + num);
+    }
     </script>
 </body>
 
