--- a/html/userTimeDetail.html
+++ b/html/userTimeDetail.html
@@ -128,6 +128,14 @@
                                 </a>
                                 </li>
                             </ul>
+                            <ul class="sub-menu">
+                                <li class="nav-item start">
+                                    <a href="devType.html" class="nav-link ">
+                                    <i class="iconfont icon-phone" style="font-size: 20px;"></i>
+                                    <span class="title">终端类型统计</span>
+                                </a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                     <!-- END SIDEBAR MENU -->
